# UserCode

ChrisAnalysis/: BuildFile
CrossSectionAnalyzer/: BuildFile  BuildFile~  CrossSections.root  crosssectionanalyzer_cfg.py  crosssectionanalyzer_cfg.py~
DoubleValueProducer/: BuildFile  doublevalueproducer_cfg.py
HEPTopTagger/: HEPTopTagger_cfi.py  SkimsWithHEPTopTagger_noCuts_cfg.py
Misc/: lheAnalyzer.py
ModelFilter/: modelfilter_cfg.py
PFClusterCalibration/: calibChris.C
ParameterPointProducer/: parameterpointproducer_cfg.py  parameterpointproducer_cfg.py~
SMSLHE/: README  condor_make_SMS_lhes.sh  condor_make_SMS_lhes.submit  make_SMS_lhes.py  slhaTolhe_SMS_cfg.py  sorter_SMS.py
ScanValidator/: BuildFile.xml
Scans/: createScan.py  exampleScan.cfg
TriggerTools/: Datasets.list  Instructions.txt  compareRatesPrescales.py  hltmenu_MENU_RUNNUMBER_DS_DATASET.cfg.template  hltmenu_extractedhltmenu.cfg  makeConfigs.py  paths.txt
mSugraLHE/: README  condor_make_msugra_lhes.sh  condor_make_msugra_lhes.submit  make_msugra_lhes.py  slhaTolhe_msugra_cfg.py  sorter_msugra.py
mSugraSLHA/softsusy-3.1.6/: Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  def.cpp  def.h  def.lo  flavoursoft.cpp  flavoursoft.h  flavoursoft.lo  lesHouchesOutput  libsoft.la  libtool  linalg.cpp  linalg.h  linalg.lo  lowe.cpp  lowe.h  lowe.lo  main.cpp  main.h  numerics.cpp  numerics.h  numerics.lo  outputTest  physpars.cpp  physpars.h  physpars.lo  rge.h  rge.lo  rpvHouchesInput  rpvHouchesOutput  rpvOutputTest  rpvmain.cpp  rpvmain.h  rpvsoft.cpp  rpvsoft.h  (+25 more)
mSugraSLHA/softsusy-3.1.6/Config/: config.h
mSugraSLHA/softsusy-3.1.6/autom4te.cache/: traces.0t
mSugraSLHA/softsusy-3.1.6/spsSLHAfiles/: sps1b.in  sps1b.out  sps2.in  sps2.out  sps3.in  sps3.out  sps4.in  sps4.out  sps5.in  sps5.out  sps6.in  sps6.out  sps7.in  sps7.out  sps8.in  sps8.out  sps9.in  sps9.out
(+408 files in other folders)
